# waku-oxidized

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
proto/: filter.proto  light_push.proto  message.proto  metadata.proto  peer_exchange.proto
src/: filter.rs  lib.rs  light_push.rs  main.rs  metadata.rs  peer_exchange.rs
