[package]
name = "waku-oxidized"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1.0.37"
tokio = { version = "1.24.2", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tcp", "gossipsub", "request-response", "tokio", "noise", "yamux", "dns", "secp256k1", "macros" ] }
futures = "0.3.30"
log = "0.4.21"
prost = "0.12"
anyhow = "1.0.86"
async-trait = "0.1.80"

[build-dependencies]
tonic-build = "0.11"
