[package]
name = "waku-oxidized"
description = "A Waku light node implementation"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/LesnyRumcajs/waku-oxidized"

[dependencies]
thiserror = "1.0.37"
tokio = { version = "1.24.2", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tcp", "gossipsub", "request-response", "tokio", "noise", "yamux", "dns", "secp256k1", "macros" ] }
futures = "0.3.30"
log = "0.4.21"
prost = "0.12"
anyhow = "1.0.86"
async-trait = "0.1.80"
env_logger = "0.11.3"
clap = { version= "4.5.4", features=["derive"]}

[build-dependencies]
tonic-build = "0.11"
